--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,18 +12,18 @@ defaults:
 
 jobs:
   release-build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout sources
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
     - name: setup golang
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
       id: go
       with:
-        go-version: 1.20.5
+        go-version: 1.23
 
     - name: verify modules
       run: go mod verify
@@ -58,17 +58,17 @@ jobs:
 
   release:
     needs: [release-build]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout sources
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
     # todo: create changelog and/or release body
 
     - name: download again the build artifacts
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         name: build-artifacts
 
